src/core-crm/objects/Lead_Score_Detail__c/Lead_Score_Detail__c.object-meta.xml
<CustomObject>
    <label>Lead Score Detail</label>
    <nameField>
        <displayFormat>LSD-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Score Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>