src/core-crm/objects/Lead_Score_Detail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to name of the contact the score belongs to.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lead Score Details</relationshipLabel>
    <relationshipName>Lead_Score_Details</relationshipName>
    <type>Lookup</type>
</CustomField>