src/core-crm/objects/Lead_Score_Detail__c/fields/Country_Tier__c.field-meta.xml
<CustomField>
    <fullName>Country_Tier__c</fullName>
    <description>The priority tiering applied by QUT to student intake</description>
    <label>Country Tier</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>