src/core-crm/objects/Lead_Score_Detail__c/fields/Course_Level__c.field-meta.xml
<CustomField>
    <fullName>Course_Level__c</fullName>
    <description>The component score attributed due to populating study level for study interest for marketing preferences</description>
    <label>Course Level</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>