src/core-crm/objects/Lead_Score_Detail__c/fields/Domestic_International__c.field-meta.xml
<CustomField>
    <fullName>Domestic_International__c</fullName>
    <description>Whether the scoring is based on Domestic or international configuration scheme</description>
    <label>Domestic or International</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>