src/core-crm/objects/Lead_Score_Detail__c/fields/Download__c.field-meta.xml
<CustomField>
    <fullName>Download__c</fullName>
    <description>The component score attributed due to course Pdf downloads</description>
    <label>Downloaded PDF</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>