src/core-crm/objects/Lead_Score_Detail__c/fields/Email_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Email_Interaction__c</fullName>
    <description>The component score attributed due to clicking on a marketing email link</description>
    <label>Email Interaction</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>