src/core-crm/objects/Lead_Score_Detail__c/fields/Enquiries__c.field-meta.xml
<CustomField>
    <fullName>Enquiries__c</fullName>
    <description>The component score attributed due to enquiries</description>
    <label>Enquiries</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>