src/core-crm/objects/Lead_Score_Detail__c/fields/Event_Registration_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Attendance__c</fullName>
    <description>The component score attributed toward Open day registration</description>
    <label>Event Registration and Attendance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>