src/core-crm/objects/Lead_Score_Detail__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <description>The component score attributed due company funding option being selected</description>
    <label>Funding</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>