src/core-crm/objects/Lead_Score_Detail__c/fields/Interested_In_Double_Degrees__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_Double_Degrees__c</fullName>
    <description>The component score attributed due to declaration on of interest in double degrees</description>
    <label>Interested In Double Degrees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>