src/core-crm/objects/Lead_Score_Detail__c/fields/Interested_In_English_Pathway_Programs__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_English_Pathway_Programs__c</fullName>
    <description>The component score attributed due to declaration on of interest in English pathway programs</description>
    <label>Interested in English Pathway Programs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>