src/core-crm/objects/Lead_Score_Detail__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to name of the lead the score belongs to.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Score Details</relationshipLabel>
    <relationshipName>Lead_Score_Details</relationshipName>
    <type>Lookup</type>
</CustomField>