src/core-crm/objects/Lead_Score_Detail__c/fields/Manual_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Assessment__c</fullName>
    <description>The applied manual override score component</description>
    <label>Manual Assessment</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>