src/core-crm/objects/Lead_Score_Detail__c/fields/Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent__c</fullName>
    <description>The component score attributed due to giving marketing consent</description>
    <label>Marketing Consent</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>