src/core-crm/objects/Lead_Score_Detail__c/fields/Match_My_Skills__c.field-meta.xml
<CustomField>
    <fullName>Match_My_Skills__c</fullName>
    <description>The component score attributed due to completing Match My Skills</description>
    <label>Match My Skills</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>