src/core-crm/objects/Lead_Score_Detail__c/fields/Preferred_Intake__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Intake__c</fullName>
    <description>The component score attributed due to populating expected intake year.</description>
    <label>Preferred Intake</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>