src/core-crm/objects/Lead_Score_Detail__c/fields/Primary_BSA__c.field-meta.xml
<CustomField>
    <fullName>Primary_BSA__c</fullName>
    <description>The component score attributed due to populating BSA for study interest for marketing preferences</description>
    <label>Primary BSA</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>