src/core-crm/objects/Lead_Score_Detail__c/fields/Primary_NSA__c.field-meta.xml
<CustomField>
    <fullName>Primary_NSA__c</fullName>
    <description>The component Score attributed due to populating NSA for study interest for marketing preferences</description>
    <label>Primary NSA</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>