src/core-crm/objects/Lead_Score_Detail__c/fields/Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement__c</fullName>
    <description>The component score attributed due to participation on university or faculty programs such as

START QUT, STEM Camp</description>
    <label>Program Engagement</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>