src/core-crm/objects/Lead_Score_Detail__c/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <description>The score allocation due to country of residence</description>
    <label>Residence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>