src/core-crm/objects/Lead_Score_Detail__c/fields/Total_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_Score__c</fullName>
    <description>The total aggregate score for all categories</description>
    <label>Total Lead Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>